# operations-debs-contenttranslation-apertium-eo-es

./: AUTHORS  Makefile.am  README  apertium-eo-es.eo.dix  apertium-eo-es.es-eo.antaux1_t2x  apertium-eo-es.es-eo.antaux2_t2x  apertium-eo-es.es-eo.antaux3_t2x  apertium-eo-es.es-eo.antaux4_t2x  apertium-eo-es.es-eo.antaux5_t2x  apertium-eo-es.es-eo.t1x  apertium-eo-es.es-eo.t2x  apertium-eo-es.es-eo.t3x  apertium-eo-es.es.tsx  apertium-eo-es_0.9.1~r60655.orig.tar.gz.delta  apertium-eo-es_0.9.1~r60655.orig.tar.gz.id  autogen.sh  comptar_dix.sh  configure.ac  es-eo-unsupervised.make  es-eo.prob  kompletigu_eo_dix.sh  krei_monodix.pl  modes.xml  nova_versio.sh  outstanding-tests.sh  regression-tests.sh  retraduku.sh
debian/: changelog  control
debian/patches/: 001-cg3-temp-fix.diff
tekstaro/: es.crp.txt
